Update Inside Tribe

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     />
   </head>
   <body>
-    <div id="root" class="no-scroll"></div>
+    <div class="w-full flex justify-center items-center flex-col">
+      <div id="root" class="no-scroll"></div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
