--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     />
   </head>
   <body>
-    <div class="w-full flex justify-center items-center flex-col">
+    <!-- <div class="w-full flex justify-center items-center flex-col no-scroll"> -->
       <div id="root" class="no-scroll"></div>
-    </div>
+    <!-- </div> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
